-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.6.0 Beta
-
None
-
Linux/X11
-
Scale mask: 42f788ffe26d67864d569c3a3044619d49fc693a (qtbase/5.6, 10.2.2016, 5.6.1)
Drag and drop shaped pixmap window doesn't respect HiDPI scaling, so the the pixmap is e.g. small and clipped.
Several aspects here:
- QShapedPixmapWindow is clipped if the DnD pixmap has a mask since QWindow::setMask() does not scale the mask (as opposed to QWidget::setMask()). This is the case for item view DnD (
QTBUG-46068) but not for tests/manual/highdpi. To reproduce: Use example fromQTBUG-46068with scaling. - QShapedPixmapWindow has the wrong size if the pixmap has a DPR != 1. To reproduce: Apply https://codereview.qt-project.org/#/c/148747/ , drag text with scaling, note white border around DnD window.
- resulted from
-
QTBUG-46615 Implement High DPI scaling v2 (5.6)
-
- Closed
-
For Gerrit Dashboard: QTBUG-50938 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
147745,3 | Manual test qcursorhighdpi: Add drag and drop. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
147791,8 | Reimplement QShapedPixmapWindow using QRasterWindow. | 5.6 | qt/qtbase | Status: MERGED | -2 | 0 |
148731,2 | QWindow::setMask(): Apply High DPI scaling. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
148732,4 | Manual High DPI test: Add test for window masks. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |
148747,3 | Manual High DPI test: Create Dnd pixmap with device pixel ratio. | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |